<resources>
    <string name="app_name">Domus</string>

    <!--    Firebase Auth Errors-->
    <string name="error_login_custom_token">The custom token format is incorrect. Please check the documentation.</string>
    <string name="error_login_custom_token_mismatch">The custom token corresponds to a different audience.</string>
    <string name="error_login_credential_malformed_or_expired">The supplied auth credential is malformed or has expired.</string>
    <string name="error_login_invalid_email">The email address is badly formatted.</string>
    <string name="error_login_wrong_password">The password is invalid or the user does not have a password.</string>
    <string name="error_login_user_mismatch">The supplied credentials do not correspond to the previously signed in user.</string>
    <string name="error_login_requires_recent_login">This operation is sensitive and requires recent authentication. Log in again before retrying this request.</string>
    <string name="error_login_accounts_exits_with_different_credential">An account already exists with the same email address but different sign-in credentials. Sign in using a provider associated with this email address.</string>
    <string name="error_login_email_already_in_use">The email address is already in use by another account.</string>
    <string name="error_login_credential_already_in_use">This credential is already associated with a different user account.</string>
    <string name="error_login_user_disabled">The user account has been disabled by an administrator.</string>
    <string name="error_login_user_not_found">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="error_login_operation_not_allowed">This operation is not allowed. You must enable this service in the console.</string>
    <string name="error_login_password_is_weak">The given password is invalid.</string>
    <string name="error_login_user_token_expired">The user\'s credential is no longer valid. The user must sign in again</string>
    <string name="error_login_invalid_user_token">The user\'s credential is no longer valid. The user must sign in again.</string>

<!--    Login Screen-->
    <string name="error_input_empty">The fields must not be empty</string>
    <string name="error_not_a_valid_email">Please enter a valid email</string>
    <string name="error_not_a_valid_phone_number">Please enter a valid phone number</string>
    <string name="error_incorrectly_repeated_password">The passwords do not match</string>
    <string name="error_invalid_credentials">The email or password is incorrect</string>
    <string name="success_registration">Successfully registered new user</string>
    <string name="success_login">Successfully logged in</string>
    <string name="error_unknown">An unknown error occurred</string>
    <string name="login_description">Login Image</string>
    <string name="arrow_icon_description">Forward Icon</string>
    <string name="label_welcome">Welcome Back!</string>
    <string name="login_account">Login to your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="toggle_password_icon">Toggle Password Icon</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="not_have_account">Do not have an account?</string>
    <string name="sign_up">Sign up</string>

    <!--    Registration Screen-->
    <string name="arrow_back_icon">Arrow back icon</string>
    <string name="create_account">Create an account</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="or">OR</string>
    <string name="login_with">Login with</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_gmail">Login with Gmail</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>

    <!--    Home Screen-->
    <string name="checklist">Checklists</string>
    <string name="receipts">Receipts</string>
    <string name="schedules">Schedules</string>
    <string name="checklist_description">My checklists</string>
    <string name="receipts_description">My receipts</string>
    <string name="schedules_description">My schedules</string>

    <!--    Profile Screen-->
    <string name="profile_title">Edit Profile</string>
    <string name="birthday">Birthday</string>
    <string name="save">Save</string>
</resources>